<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_biodata"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/btn_biodata" />

    <item
        android:id="@+id/nav_pendidikan"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/btn_pendidikan" />

    <item
        android:id="@+id/nav_aktivitas"
        android:icon="@android:drawable/ic_menu_day"
        android:title="@string/btn_aktivitas" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

</menu>
